tests/positive/Parsing.mjuvix
module Parsing;

 let' : Type;
 let' ≔ Type;

 TypeMine : Type;
 TypeMine := Type;
end;
