tests/negative/LacksTypeSig.mjuvix
module LacksTypeSig;


   some ≔ Type;
end;
